.kubes/restful-booker-platform/ns-rbp.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: restful-booking-platform
  name: restful-booking-platform
