.kubes/restful-booker-platform/deployment-rbp-booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rbp-booking
  name: rbp-booking
  namespace: restful-booking-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbp-booking
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/restful-booking-platform: "true"
        app.kubernetes.io/name: rbp-booking
    spec:
      containers:
        - name: rbp-booking
          image: mwinteringham/restfulbookerplatform_booking:1.6.24c7b22
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources: {}
          readinessProbe:
            httpGet:
              port: 3000
              path: /booking/actuator/health
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 4
            successThreshold: 2
            failureThreshold: 3
      restartPolicy: Always
status: {}
