.kubes/restful-booker-platform/deployment-rbp-branding.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rbp-branding
  name: rbp-branding
  namespace: restful-booking-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbp-branding
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/restful-booking-platform: "true"
        app.kubernetes.io/name: rbp-branding
    spec:
      containers:
        - name: rbp-branding
          image: mwinteringham/restfulbookerplatform_branding:1.6.24c7b22
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          resources: {}
          readinessProbe:
            httpGet:
              port: 3002
              path: /branding/actuator/health
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 4
            successThreshold: 2
            failureThreshold: 3
      restartPolicy: Always
status: {}
