.kubes/restful-booker-platform/deployment-rbp-report.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rbp-report
  name: rbp-report
  namespace: restful-booking-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbp-report
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/restful-booking-platform: "true"
        app.kubernetes.io/name: rbp-report
    spec:
      containers:
        - name: rbp-report
          image: mwinteringham/restfulbookerplatform_report:1.6.24c7b22
          imagePullPolicy: Always
          ports:
            - containerPort: 3005
          resources: {}
          readinessProbe:
            httpGet:
              port: 3005
              path: /report/actuator/health
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 4
            successThreshold: 2
            failureThreshold: 3
      restartPolicy: Always
status: {}
