.kubes/restful-booker-platform/deployment-rbp-room.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: rbp-room
  name: rbp-room
  namespace: restful-booking-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: rbp-room
  strategy: {}
  template:
    metadata:
      labels:
        network.kubernetes.io/restful-booking-platform: "true"
        app.kubernetes.io/name: rbp-room
    spec:
      containers:
        - name: rbp-room
          image: mwinteringham/restfulbookerplatform_room:1.6.24c7b22
          imagePullPolicy: Always
          ports:
            - containerPort: 3001
          resources: {}
          readinessProbe:
            httpGet:
              port: 3001
              path: /room/actuator/health
            initialDelaySeconds: 1
            periodSeconds: 5
            timeoutSeconds: 4
            successThreshold: 2
            failureThreshold: 3
      restartPolicy: Always
status: {}
