.kubes/restful-booker-platform/service-rbp-assets.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-assets
  name: rbp-assets
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3003
      protocol: TCP
      targetPort: 3003
  selector:
    app.kubernetes.io/name: rbp-assets
status:
  loadBalancer: {}
