.kubes/restful-booker-platform/service-rbp-auth.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-auth
  name: rbp-auth
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3004
      protocol: TCP
      targetPort: 3004
  selector:
    app.kubernetes.io/name: rbp-auth
status:
  loadBalancer: {}
