.kubes/restful-booker-platform/service-rbp-booking.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-booking
  name: rbp-booking
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app.kubernetes.io/name: rbp-booking
status:
  loadBalancer: {}
