.kubes/restful-booker-platform/service-rbp-branding.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-branding
  name: rbp-branding
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3002
      protocol: TCP
      targetPort: 3002
  selector:
    app.kubernetes.io/name: rbp-branding
status:
  loadBalancer: {}
