.kubes/restful-booker-platform/service-rbp-message.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-message
  name: rbp-message
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3006
      protocol: TCP
      targetPort: 3006
  selector:
    app.kubernetes.io/name: rbp-message
status:
  loadBalancer: {}
