.kubes/restful-booker-platform/service-rbp-proxy.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-proxy
  name: rbp-proxy
  namespace: restful-booking-platform
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      nodePort: 80
      targetPort: 80
  selector:
    app.kubernetes.io/name: rbp-proxy
status:
  loadBalancer: {}
