.kubes/restful-booker-platform/service-rbp-report.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-report
  name: rbp-report
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3005
      protocol: TCP
      targetPort: 3005
  selector:
    app.kubernetes.io/name: rbp-report
status:
  loadBalancer: {}
