.kubes/restful-booker-platform/service-rbp-room.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: rbp-room
  name: rbp-room
  namespace: restful-booking-platform
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app.kubernetes.io/name: rbp-room
status:
  loadBalancer: {}
